<resources>
    <string name="app_name">MY GREEN TRIP</string>
    <string name="pontos_de_interesse">Pontos de Interesse</string>
    <string name="recompensas">Recompensas</string>
    <string name="recompensas1">2 Cafés no Academia</string>
    <string name="recompensas2">Troque pontos para receber este Voucher</string>
    <string name="recompensas3">Recompensas Disponiveis</string>
    <string name="todo">TODO</string>
    <string name="my_green_trip">My Green Trip</string>
    <string name="restaura_o">Restauração</string>
    <string name="h_teis">Hóteis</string>
    <string name="museus">Museus</string>
    <string name="natureza">Natureza</string>
    <string name="cultura">Cultura</string>
    <string name="desporto">Desporto</string>
    <string name="transporte">Transporte</string>
    <string name="homebutton">TODO</string>
    <string name="PontoIntLogo">TODO</string>
    <string name="pontos_pr_ximos">Pontos Próximos</string>
    <string name="iniciocomecar">Começar</string>
    <string name="termostitulo">Termos de Usabilidade</string>
    <string name="termostexto">Ao usar esta aplicação, concorda ter idade superior a 13 anos.
    </string>
    <string name="termosaceito">Aceito</string>
    <string name="iniciologin">Login</string>
    <string name="iniciocriarconta">Criar Conta</string>
    <string name="pontointeresseinfotext">Text normal placeholder</string>
    <string name="Titulopontointeressetext">Titulo Ponto Interesse Placeholder</string>
    <string name="DigiCodigoQR">Digitalize o Codigo QR</string>
    <string name="DigiQRText">Receba 10 pontos </string>
    <string name="thumbnailpontointeresse">ThumbnailPontoInteresse</string>
<<<<<<< Updated upstream
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="regiao">Região</string>
    <string name="perdeupassword">Perdeu a password?</string>
    <string name="recexp">Introduza o seu email de recuperação</string>
    <string name="reccod">Introduza o código enviado para o seu email</string>
    <string name="recpass">Introduza a nova password</string>
    <string name="recuperar">Recuperar</string>
    <string name="codigorec">Código de recuperação</string>
    <string name="novapassword">Nova Password</string>
    <string name="PontosInteresse">Pontos de Interesse</string>
    <string name="PontosInteresseInfo">Encontra pontos de Interesse proximos, efetua reservas para futuras visitas, e resgata pontos ao visitar estes lugares.</string>
    <string name="Recompensas">Recompensas</string>
    <string name="RecompensasInfo">Troque os seus pontos por vouchers.</string>
    <string name="PontoseVouchers">Pontos e Vouchers</string>
    <string name="PontoseVouchersInfo">Visualize os pontos e vouchers disponiveis. Troque os seus pontos por vouchers.</string>
    <string name="Reservas">Reservas</string>
    <string name="ReservasInfo">Visualize os dados das reservas ativas. Pode aceder a reservas canceladas e cancelar as ativas.</string>
    <string name="Perfil">Perfil</string>
    <string name="PerfilInfo">Modifique os seus dados pessoais e encontre estatisticas sobre a sua campanha na app.</string>
    <string name="Explorar">Só quero explorar a aplicação</string>
    <string name="avisologin">Para ter acesso a todos os menus</string>
    <string name="avisologin2">Efetue o login</string>
    <string name="ok">Ok</string>
=======
    <string name="heroimage">HeroImage</string>
    <string name="qrcodeicon">QRCodeIcon</string>
    <string name="gobackarrow">GoBackArrow</string>
>>>>>>> Stashed changes
</resources>