<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ecra_Principal_SemLogin"
    android:background="@drawable/termos_darkbg">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="412dp"
        android:layout_height="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_rectangle" />

    <TextView
        android:id="@+id/myGreenTripTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/my_green_trip"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButtonTop"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/homebutton"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homebutton"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/login_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:background="@drawable/textborder"
        android:fontFamily="@font/montserrat_light"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingTop="16dp"
        android:textAlignment="center"
        android:text="@string/iniciologin"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/homeButtonTop"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/avisologin"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/aviso_bg"
        android:translationZ="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:text="@string/avisologin"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="46dp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/avisologin2"
            android:textSize="16dp" />

        <Button
            android:id="@+id/ok1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:minHeight="48dp"
            android:text="@string/ok"
            android:textColor="@color/green"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Recompensas"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/card_bg"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PontosInteresse">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Recompensas"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/RecompensasInfo"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/darkgreen_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Reservas"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PontosVouchers"
        android:background="@drawable/termos_darkbg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Reservas"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/ReservasInfo"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/dark_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PontosInteresse"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        android:background="@drawable/card_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/PontosInteresse"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/PontosInteresseInfo"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/darkgreen_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/PontosVouchers"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recompensas"
        android:background="@drawable/termos_darkbg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/PontoseVouchers"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/PontoseVouchersInfo"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/dark_circle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Perfil"
        android:layout_width="339dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Reservas"
        android:background="@drawable/card_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Perfil"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/PerfilInfo"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/circle5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/darkgreen_circle" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>