<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recuperar_pass_pass">

    <Button
        android:id="@+id/recuperar_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="118dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:paddingLeft="36dp"
        android:paddingTop="12dp"
        android:paddingRight="36dp"
        android:paddingBottom="12dp"
        android:text="@string/recuperar"
        android:textColor="@color/green"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec_pass_1"
        app:strokeColor="@color/lightgray"
        app:strokeWidth="0.5dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="134dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/recpass"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/novapass_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="244dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/novapassword"
        android:textColor="@color/green"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/rec_pass_1"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/codigorec"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novapass_1" />
</androidx.constraintlayout.widget.ConstraintLayout>